# eight-ball

./: COPYING  LICENSE  README.md  meson.build  ml.mdwalters.EightBall.json
data/: meson.build  ml.mdwalters.EightBall.appdata.xml.in  ml.mdwalters.EightBall.desktop.in  ml.mdwalters.EightBall.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: eight-ball.in  eight_ball.gresource.xml  main.py  meson.build  window.py  window.ui
